# CardStream

./: .gitignore  .sops.yaml  Makefile  README.md  bootstrap.sh  flake.nix  healthcheck.sh  pyproject.toml  run_local.py  run_local_pg.py  secrets.yaml
db/: schema.sql  seed.py
docs/: architecture.md  contributing.md  dashboard-guide.md  data-dictionary.md  postgresql.md  secrets.md
specs/: DESIGN.md  SPEC.md  TASKS.md
src/: __init__.py
src/backend/: __init__.py
src/backend/connectors/: __init__.py  pg_connector.py  protocol.py  sis_connector.py  validation.py  warehouse.py
src/backend/transforms/: __init__.py  alert_engine.py  alert_models.py  daily_summary.py  pipeline.py  risk_metrics.py
src/frontend/: __init__.py  app.py
src/frontend/components/: __init__.py  alert_banner.py  charts.py  failure_analysis.py  migration_tracker.py  risk_dashboard.py  seaborn_charts.py
src/schemas/: __init__.py  payments.py
tests/: conftest.py  test_connector.py  test_dashboard.py  test_pg_connector.py  test_pipeline.py  test_render_components.py  test_risk_metrics.py  test_schemas.py  test_transforms.py
