[project]
name = "payments-analytics"
version = "0.1.0"
description = "Fund Manager Payments Platform — Analytics ETL & Streamlit Dashboard"
requires-python = "==3.11.*"

dependencies = [
    "snowflake-snowpark-python>=1.9.0",
    "snowflake-connector-python>=3.17,<5.0.0",
    "pandas>=2.1,<3.0",
    "pydantic>=2.5,<3.0",
    "streamlit>=1.35.0",
    "plotly>=5.18",
    "seaborn>=0.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "pydantic[mypy]>=2.5",
    "pandas-stubs>=2.1",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires .env.test and live Snowflake credentials",
]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
module = ["plotly.*", "seaborn.*", "matplotlib.*"]
ignore_missing_imports = true
